...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_200"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="true"
                    android:contentDescription="@string/image_poster"
                    android:overScrollMode="never"
                    android:scaleType="centerCrop" />
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/caramel"
                android:gravity="start"
                android:text="@string/dummy_title"
...
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:ignore="ContentDescription"

                />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:baselineAlignBottom="true"
                android:fontFamily="@font/caramel"
                android:gravity=""
...
                android:src="@drawable/ic_movie_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_star"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/caramel"
                android:textColor="@android:color/white"
                android:textSize="16sp"
...
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/img_date_release"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/caramel"
                android:textColor="@android:color/white"
                android:textSize="16sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genres" />


            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/caramel"
                android:gravity="start"
...
            android:layout_margin="12dp"
            android:elevation="1dp"
            android:indeterminateTint="@color/purple_200" />
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/layout_error"
        layout="@layout/fortyfor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_error_no_content"
        layout="@layout/layout_no_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="8dp"
        android:src="@drawable/ic_favorite_border"
        app:backgroundTint="@android:color/white"
...
