<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.movie.DetailMovieActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleMarginEnd="56dp"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <RelativeLayout
                android:id="@+id/layout_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_200"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_postertes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="true"
                    android:contentDescription="@string/imageBackground"
                    android:overScrollMode="never"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/image_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/imageBackground"
                    android:src="@drawable/background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:background="@color/purple_200"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_title_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/caramel"
                android:gravity="start"
                android:text="@string/dummy_title"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/img_date_release_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:baselineAlignBottom="true"
                android:src="@drawable/ic_baseline_date_range_24"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/tv_title_movie"
                tools:ignore="ContentDescription"

                />

            <TextView
                android:id="@+id/tv_release_date_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:baselineAlignBottom="true"
                android:fontFamily="@font/caramel"
                android:gravity=""
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_date_release_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_date_release_movie"
                app:layout_constraintTop_toTopOf="@+id/img_date_release_movie"
                tools:text="Realease Date" />


            <ImageView
                android:id="@+id/img_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_star"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_movie_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_star"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_genres_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/caramel"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_list"
                app:layout_constraintTop_toTopOf="@+id/img_list"
                tools:text="Berantem" />

            <ImageView
                android:id="@+id/img_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_start"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/img_date_release_movie"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_rating_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/caramel"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_star"
                app:layout_constraintTop_toTopOf="@+id/img_star"
                tools:text="80" />


            <TextView
                android:id="@+id/tv_description_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/caramel"
                android:text="@string/description_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genres_movie" />


            <TextView
                android:id="@+id/tv_desc_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/caramel"
                android:gravity="start"
                android:maxLines="10"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_title"
                tools:text="@string/description" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:cardCornerRadius="8dp">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="12dp"
            android:elevation="1dp"
            android:indeterminateTint="@color/purple_200" />
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/layout_error_movie_detail"
        layout="@layout/fortyfor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_error_no_content_movie"
        layout="@layout/layout_no_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="8dp"
        android:src="@drawable/ic_favorite_border"
        app:backgroundTint="@android:color/white"
        app:borderWidth="0dp"
        app:elevation="6dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
