<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_favorite_white"
        android:title="@string/Favorite" />
</menu>